+if test ! "$USE_RPATH" = "yes"; then +  LIBXLST_RPATH= +fi
svn path=/trunk/kdelibs/; revision=142742

--- a/kdoctools/configure.in.in
+++ b/kdoctools/configure.in.in
@@ -69,6 +69,9 @@ else
   DO_NOT_COMPILE="$DO_NOT_COMPILE kdoctools"
 fi
 
+if test ! "$USE_RPATH" = "yes"; then
+  LIBXLST_RPATH=
+fi
 
 AC_SUBST(LIBXSLT_LIBS)
 AC_SUBST(LIBXSLT_CFLAGS)
