--- a/khtml/khtmlimage.desktop
+++ b/khtml/khtmlimage.desktop
@@ -2,100 +2,8 @@
 Encoding=UTF-8
 Type=Service
 Comment=Embeddable Image Viewing Component
-Comment[af]=inlegbare beeld aansig komponent
-Comment[ar]=مكون عرض صور قابل للدمج
-Comment[az]=Hopdurula Bilən Rəsm Nümayiş Vasitəsi
-Comment[bg]=Вграден елемент на преглед за картини
-Comment[cs]=Komponenta pro zobrazování obrázků
-Comment[da]=Indbygget komponent til fremvisning af billeder
-Comment[de]=Einbettungsfähige Bildbetrachter-Komponente
-Comment[el]=Ενσωματώσιμο άρθρωμα Προβολής Εικόνων
-Comment[eo]=Enkonstruebla bildrigardilo
-Comment[es]=Componente incrustable para visualizar imágenes
-Comment[et]=Põimitav pildifailide näitamise komponent
-Comment[eu]=Irudi ikusgailu osagai txertagarria
-Comment[fi]=Upotettava kuviennäyttökomponentti
-Comment[fr]=Composant afficheur d'images incorporé
-Comment[gl]=Compoñente de visualización de imaxes embebible
-Comment[he]=רכיב בר-הטבעה להצגת תמונות
-Comment[hu]=Beágyazható képnéző komponens
-Comment[id]=Komponen melihat gambar yang embeddable
-Comment[is]=khtmlimage:  Ásetjanleg mynd-sjá
-Comment[it]=Componente importabile per la visualizzazione delle immagini
-Comment[ja]=埋め込み可能なイメージビューコンポーネント
-Comment[ko]=다른 곳에 끼워져서 그림을 보여주는 콤포넌트
-Comment[lt]=Įdedamas piešinių peržiūros komponentas
-Comment[lv]=Iegultā Attēlu Skatīšanas Komponente
-Comment[mk]=Вградлива компонента за гледање слики
-Comment[mt]=Komponent integrat għall wiri tal-istampi
-Comment[nb]=Inkluderbart bildevisningskomponent
-Comment[nl]=een inbedbaar afbeeldingenviewercomponent
-Comment[nn]=Inkluderbart komponent for biletevising
-Comment[pl]=Składnik do przeglądania obrazów
-Comment[pt]=Componente embebível para visualizar imagens
-Comment[pt_BR]=Componente embutível de visualização de imagens
-Comment[ru]=Элемент просмотра встраиваемых изображений
-Comment[sk]=Vložiteľný komponent prehliadač obrázkov
-Comment[sl]=Integrirana komponenta za pregled slik
-Comment[sr]=Ugradiva komponenta za pregled slika
-Comment[sv]=Inbäddningsbar bildvisande komponent
-Comment[ta]=¯ð¦À¡¾¢ó¾ ¯ì¸¡ðÊì ÜÚ
-Comment[tr]=Gömülebilir Resim Görüntüleme Aracı
-Comment[uk]=Вбудований компонент 'переглядач образів'
-Comment[vi]=Component đềExem ảnh có thềEembedd được 
-Comment[xh]=Inxenye yemboniselo yomfanekiso olungisiweyo
-Comment[xx]=xx
-Comment[zh_CN]=可嵌入的图像查看部件
-Comment[zh_TW]=可嵌入的影像查看元件
-Comment[zu]=Ohlanganisekayo Umbonisi Womfanekiso
-MimeType=image/gif;image/x-xpm;image/x-xbm;image/jpeg;image/bmp;image/png;image/x-ico;
+MimeType=image/gif;image/x-xpm;image/x-xbm;image/jpeg;image/x-bmp;image/png;image/x-ico;
 Name=Embeddable Image Viewer
-Name[af]=inlegbare beeld aansig
-Name[ar]=عارض الصور القابل للدمج
-Name[az]=Daxili Rəsm Nümayişçisi
-Name[bg]=Вграден преглед на картини
-Name[cs]=Zabudovaný prohlížeč obrázků
-Name[da]=Indbygget billedfremviser
-Name[de]=Eingebetteter Bildbetrachter
-Name[el]=Ενσωματώσιμη Προβολή Εικόνας
-Name[eo]=Enkonstruita bildrigardilo
-Name[es]=Visor de imágenes incrustable
-Name[et]=Põimitav pildifailide näitaja
-Name[eu]=Irudi ikusgailu txertagarria
-Name[fi]=Upotettava kuvannäyttäjä
-Name[fr]=Afficheur d'images incorporé
-Name[gl]=Visualizador de Imaxes Embebible
-Name[he]=מציג תמונות בר-הטבעה
-Name[hu]=Beágyazható képnézegető
-Name[id]=Viewer gambar yang embeddable
-Name[is]=Ásetjanleg myndsjá
-Name[it]=Visualizzatore integrabile di immagini
-Name[ja]=埋め込みイメージビューア
-Name[ko]=다른 곳에 끼워지는 그림 보기
-Name[lt]=Įdedamas piešinių žiūriklis
-Name[lv]=Iegultais Attēlu Skatītājs
-Name[mk]=Вгнездлив гледач на слики
-Name[mt]=Werrej integrat tal-istampi
-Name[nb]=Innlimbart bildeviser
-Name[nl]=Ingebedde afbeeldingenviewer
-Name[nn]=Innebygd biletevisar
-Name[pl]=Wbudowana przeglądarka obrazów
-Name[pt]=Visualizador de Imagens Embebido
-Name[pt_BR]=Visualizador embutido de imagens
-Name[ru]=Просмотрщик встроенных изображений
-Name[sk]=Vložiteľný prehliadač obrázkov
-Name[sl]=Vgrajen pregledovalnik slik
-Name[sr]=Ugrađeni prikazivač slika
-Name[sv]=Inbäddningsbar bildvisare
-Name[ta]=¯ð¦À¡¾¢ó¾ ¯Õì ¸¡ðÊ
-Name[tr]=Gömülü Resim Görüntüleyici
-Name[uk]=Вмонтований переглядач образів
-Name[vi]=Trình xem ảnh có thềEembedd được 
-Name[xh]=Umboniseli womfanekiso olungisiweyo
-Name[xx]=xx
-Name[zh_CN]=可嵌入的图像查看器
-Name[zh_TW]=可嵌入的影像查看器
-Name[zu]=Ohlanganisekayo Umbonisi Womfanekiso
 ServiceTypes=KParts/ReadOnlyPart
 InitialPreference=4
 X-KDE-Library=libkhtmlimage
