CVS_SILENT made messages
svn path=/trunk/kdebase/kcontrol/crypto/; revision=143855

--- a/security/crypto/crypto.desktop
+++ b/security/crypto/crypto.desktop
@@ -66,8 +66,8 @@ Comment[ca]=Configura SSL, gestiona certificats, i altres valors de criptografia
 Comment[cs]=Nastavení SSL, správa certifikátů a ostatní kryptografická nastavení
 Comment[da]=Indstil SSL, håndtér certifikater og andre kryptografiske indstillinger
 Comment[de]=SSL einrichten, Zertifikate verwalten und andere Einstellungen zur Verschlüsselung von Daten vornehmen
-Comment[el]=Ρύθμιση SSL, διαχείριση πιστοπιητικών, και άλλες ρυθμίσεις κρυπτογραφίας
-Comment[eo]=Agordo de SSL, administrado de atestiloj kaj aliaj aferoj rilate ĉifradon
+Comment[el]=Ρύθμιση SSL, διαχείριση πιστοποιητικών, και άλλες ρυθμίσεις κρυπτογραφίας
+Comment[eo]=Agordo de SSL, administrado de atestiloj ktp.
 Comment[es]=Configura SSL, administra los certificados y otras opciones de criptografía.
 Comment[et]=SSL seadistamine, sertifikaatide haldamine jms.
 Comment[eu]=SSL konfiguratu, ziurtagiriak kudeatu, eta kriptologiarekin zerikusrik duten bertze tresnak
@@ -87,7 +87,7 @@ Comment[lv]=Konfigurēt SSL, menedžēt sertifikātus, un citus kriptogrāfijas 
 Comment[mk]=Конфигурација на SSL, менаџмент на сертификати и други криптографски поставки
 Comment[mt]=Ikkonfigura l-SSL, immaniġġja ċertifikati, u konfigurazzjoni oħra tal-kriptografijaConfigure SSL, manage certificates, and other cryptography setings
 Comment[nb]=Konfigurering av SSL, behandling av sertifikater og andre krypteringsinnstillinger
-Comment[nl]=Configureer SSL, beheer certificaten, en andere cryptografische instellingen
+Comment[nl]=configureer SSL, beheer certificaten, en andere cryptografische instellingen
 Comment[nn]=Oppsett av SSL, sertifikat og andre krypteringsinnstillingar
 Comment[oc]=Configura SSL, gestiona certificats, e autres valors de criptografia
 Comment[pl]=Konfiguracja SSL, zarządzanie certyfikatami, inne ustawienia kryptograficzne
@@ -100,9 +100,10 @@ Comment[sl]=Prikroji SSL, urejaj certifikate in ostale nastavitve šifriranja
 Comment[sr]=Konfigurišite SSL, upravljajte sertifikatima i drugim kriiptografskim podešavanjima
 Comment[sv]=Anpassa SSL, hantera certifikat, samt andra kryptografiska inställningar
 Comment[ta]=SSL ÅÊÅ¨ÁôÒ, ¿üº¡ýÈ¢¾ú¸¨Ç §ÁÄ¡ñ¨Á, ÁüÚõ ­¾Ã Á¨ÈÂ£ðÎ «¨ÁôÒì¸û
-Comment[th]=ปรับแต่ง SSL, จัดการการรับรอง และตั้งการการเข้ารหัสอื่นๆ
+Comment[th]=ปรับแต่ง SSL, จัดการใบรับรอง และตั้งการการเข้ารหัสอื่นๆ
 Comment[tr]=SSL,sertifika,sertifika ayarları,diğer şifreleme ayarları
 Comment[uk]=Настроює SSL, керує сертифікатами та іншими параметрами криптографії
+Comment[ven]=Khonifiga SSL, i laula sethifikheithi, na dzine mbekanyo dza khiraiputogirafi
 Comment[vi]=Cấu hình SSL, quản lí giấy chứng nhận và các thiết lập vềEmật mã khác 
 Comment[xh]=Qwalasela SSL, yenza iziqinisekiso,kunye nezinye izicwangciso zokufihlakeleyo
 Comment[xx]=xx
@@ -145,6 +146,7 @@ Keywords[sl]=Kripto,Kriptografija,šifriranje,SSL,https,certifikati,šifrirni al
 Keywords[sv]=Crypto,Krypto,Kryptografi,kryptering,SSL,https,certifikat,krypton,TLS,säkra,säkerhet
 Keywords[tr]=Şifre,şifreleme,şifrebilim,SSL,https,sertifika,TLS,güvenlik,güvenli
 Keywords[uk]=крипто,криптографія,Cryptography,шифрування,SSL,https,TLS,сертифікати,шифри,Crypto,Krypto,безпека,безпечність
+Keywords[ven]=Crypto,Krypto,Cryptography,encryption,SSL,https,sethifikheithi,ciphers,TLS,tsireledza,vhutsireledzi
 Keywords[vi]=Mật mã,Krypto,Mật mã học,mã hóa,SSL,https, giấy chứng nhận, mật mã, TLS, bảo mật, bảo đảm 
 Keywords[xh]=Imfihlo,imfihlo,okufihlakeleyo,ufihlo,SSL,https,iziqinisekiso,imibhalo efihlakeleyo,TLS,khusela,ukhuseleko
 Keywords[xx]=xx
