CVS_SILENT made messages
svn path=/trunk/kdelibs/; revision=144203

--- a/kdeprint/filters/ps2pdf.desktop
+++ b/kdeprint/filters/ps2pdf.desktop
@@ -1,8 +1,48 @@
 [KDE Print Filter Entry]
 Name=ps2pdf
-Name[xxx]=xx
+Name[eo]=Konvertilo de Postskripto al PDF
+Name[fr]=Ps2pdf
+Name[pt_BR]=Conversão de PS para PDF
+Name[xx]=xx
 Require=exec:/ps2pdf
 Comment=PostScript to PDF converter
-Comment[xxx]=xx
+Comment[af]=postscript aan pdf omskakelaar
+Comment[ar]=محول مستندات بوست سكريبت إلى PDF
+Comment[az]=PostScript-dən PDF sənədinə gönüşdürücü
+Comment[be]=Канвэртар PostScript у PDF
+Comment[bg]=Програма за преглед на файлове във формат PS/PDF
+Comment[bs]=Pretvaranje PostScripta u PDF
+Comment[cs]=Konvertor Postscriptu do PDF
+Comment[da]=PostScript til PDF konvertering
+Comment[de]=Konvertierung von PostScript- in PDF-Dokumente
+Comment[el]=Μετατροπέας από PostScript σε PDF
+Comment[eo]=Konvertilo de la dokumenttipo PS al PDF
+Comment[es]=Conversor de PostScript a PDF
+Comment[eu]=PostScript-etik PDF-ra bihurtailea
+Comment[fi]=Postscriptista PDF muotoon konvertoija
+Comment[fr]=Convertisseur de documents PostScript en PDF
+Comment[he]=ממיר PostScript ל-PDF
+Comment[hu]=PostScript -> PDF konvertálóprogram
+Comment[it]=Convertitore da PostScript a PDF
+Comment[ja]=PostScriptからPDFへの変換ツール
+Comment[lt]=PostScript į PDF konverteris
+Comment[lv]=PostScript uz PDF konverters
+Comment[nl]=PostScript naar PDF omzetter
+Comment[nn]=Konvertering mellom PostScript og PDF
+Comment[pt]=Conversor de PostScript para PDF
+Comment[pt_BR]=Conversão de  Postscript para PDF
+Comment[ro]=Convertor de la PDF la PostScript
+Comment[sk]=Prevod súborov PostScript do PDF
+Comment[sl]=Pretvornik datotek PostScript v PDF
+Comment[sv]=Postscript till PDF-konverterare
+Comment[th]=ตัวแปลงโพสต์สคริปต์ไปเป็น PDF
+Comment[tr]=PostScript'ten PDF'e çevirici
+Comment[uk]=Конвертор документів з формату PostScript в PDF
+Comment[ven]=Bammbiri la poso uya kha mushandukisi wa PDF
+Comment[vi]=Trình hoán chuyển PostScript thành PDF
+Comment[xh]=Okushicilelwe phantsi okuposwayo PDF umboniseli wexwebhu
+Comment[xx]=xx
+Comment[zh_CN]=PostScript 到 PDF 的转换器
+Comment[zu]=PostSikripti kuya kumguquleli we PDF
 MimeTypeIn=application/postscript
 MimeTypeOut=application/pdf
