--- a/kio/renamedlgplugin.desktop
+++ b/kio/renamedlgplugin.desktop
@@ -5,22 +5,39 @@ X-KDE-ServiceType=RenameDlg/Plugin
 Comment=Plugin for the Rename Dialog
 Comment[af]=inplak vir die herbenaam dialoog
 Comment[ar]=ملحق لمربع حوار إعادة التسمية
+Comment[bg]=Plugin на диалога за Преименуване
+Comment[bs]=Dodatak za Rename dijalog
+Comment[cs]=Modul pro přejmenovávací dialog
 Comment[da]=Indstik til omdøbningsdialog
 Comment[de]=Plugin für den Umbenennen-Dialog
+Comment[el]=Πρόσθετο για το Διάλογο Μετονομασίας
 Comment[en_GB]=Plugin for the Rename Dialogue
+Comment[eo]=Kromaĵo por la alinoma dialogo
 Comment[es]=Plugin para el diálogo de renombrado
+Comment[eu]=Berrizendatu Elkarrizketarako Plugina
 Comment[fi]=Sovelma uudelleennimeämisikkunalle
 Comment[fr]=Module pour la fenêtre de changement de nom
 Comment[he]=תוסף לדו-שיח שינוי השם
 Comment[hu]=Bővítőmodul az átnevezési párbeszédablakhoz
+Comment[it]=Plugin per la finestra di rinominazione
+Comment[ja]=名前変更ダイアログ用プラグイン
 Comment[lt]=Priedas pervardinimo dialogui
 Comment[lv]=Iespraudnis Pārsaukšanas Dialogam
 Comment[nl]=Plugin voor het 'Hernoemen'-dialoog
 Comment[nn]=Tillegg til dialogen for namnebyte
 Comment[pt]='Plugin' para a Janela de Mudança do Nome
-Comment[pt_BR]='Plugin' para a Janela de Mudança do Nome
+Comment[pt_BR]=Plug-in para o Diálogo Renomear
+Comment[ro]=Modul pentru dialogul de redenumire
 Comment[sk]=Modul pre premenovací dialóg
 Comment[sl]=Vstavek za pogovorno okno za preimenovanje
 Comment[sv]=Insticksprogram för Byt namn-dialogen
 Comment[ta]=ÁÚ¦ÀÂÃ¢¼ø ¯¨ÃÂ¡¼ü ¦ºÕ¸ø
+Comment[th]=ปลั๊กอินสำหรับกล่องเปลี่ยนชื่อ
+Comment[tr]=Yeniden İsimlendir İletişim Kutusu İçin Eklenti
+Comment[uk]=Додаток для діалогу перейменування
+Comment[ven]=Pulagini uitela u rinulula nyambedzano
+Comment[vi]=Plugin cho Rename Dialog
+Comment[xh]=Iplagi Efakiweyo Yempahla Yencoko Yababini
 Comment[xx]=xx
+Comment[zh_CN]=重命名对话的插件
+Comment[zu]=Iplagi efakiweyo Yokuphinda uqambe igama Ingxoxo
