--- a/ksmartcard/kardimpl/kcardgemsafe.desktop
+++ b/ksmartcard/kardimpl/kcardgemsafe.desktop
@@ -10,22 +10,35 @@ X-KDE-Smartcard-SubType=gem2
 X-KDE-Smartcard-SubSubType=gem3
 Name=GemSafe Card implementation
 Name[az]=GemSafe Kart implementasiyası
+Name[bg]=Имплементация на Картата GemSafe 
+Name[bs]=GemSafe Card implementacija
+Name[cs]=Implementace karty GemSafe
 Name[da]=GemSafe Kortimplementering
 Name[de]=GemSafe-Kartenfunktion
+Name[el]=Υλοποίηση Κάρτας GemSafe
+Name[eo]=GemSafe-karta implemento
 Name[es]=Implementación de tarjetas GemSafe
+Name[eu]=GemSafe Txartelarako implementazioa
 Name[fi]=GemSafe älykortin toteutus
 Name[fr]=Implentation des cartes «GemSafe»
 Name[he]=יישום כרטיסי GemSafe
 Name[hu]=GemSafe kártyaimplementáció
+Name[it]=Implementazione delle schede GemSafe
+Name[ja]=GemSafeカードインプリメンテーション
 Name[lt]=GemSafe kortos realizacija
 Name[lv]=GemSafe Karšu realizācija
 Name[nl]=GemSafe kaartimplementatie
 Name[nn]=GemSafe-kortimplementasjon
 Name[pt]=Implementação da placa GemSafe
-Name[pt_BR]=Implementação da placa GemSafe
+Name[pt_BR]=Implementação da Placa GemSafe
+Name[ro]=Implementare card GemSafe
 Name[sk]=Implementácia GemSafe Card
 Name[sl]=Implementacija kartice GemSafe
 Name[sv]=GemSafe-kortimplementation
+Name[tr]=GemSafe Kart gerçekleştirmesi
+Name[uk]=Впровадження карток GemSafe
+Name[ven]=U ita garata ya GemSafe
 Name[xh]=GemSafe Uzalisekiso lwekhadi
 Name[xx]=xx
+Name[zh_CN]=GemSafe卡实现
 Name[zu]=Ukufakelwa kwe Khadi leGemSafe 
