--- a/ksmartcard/kardimpl/kcardgsm.desktop
+++ b/ksmartcard/kardimpl/kcardgsm.desktop
@@ -10,22 +10,35 @@ X-KDE-Smartcard-SubType=gsm2
 X-KDE-Smartcard-SubSubType=gsm3
 Name=GSM Card implementation
 Name[az]=GSM Kart implementasiyası
+Name[bg]=Имплементация на Картата GSM
+Name[bs]=GSM Card implementacija
+Name[cs]=Implementace karty GSM
 Name[da]=GSM Kortimplementering
 Name[de]=GSM-Kartennunktion
+Name[el]=Υλοποίηση Κάρτας GSM
+Name[eo]=GSM-karta-implemento
 Name[es]=Implementación de tarjetas GSM
+Name[eu]=GSM Txartelarako implementazioa
 Name[fi]=GSM älykortin toteutus
 Name[fr]=Implentation des cartes GSM
 Name[he]=יישום כרטיסי GSM
 Name[hu]=GSM kártyaimplementáció
+Name[it]=Implementazione delle schede GSM
+Name[ja]=GSMカードインプリメンテーション
 Name[lt]=GSM kortos realizacija
 Name[lv]=GSM Karšu realizācija
 Name[nl]=GSM-kaartimplementatie
 Name[nn]=GSM-kortimplementasjon
 Name[pt]=Implementação de uma placa GSM
-Name[pt_BR]=Implementação de uma placa GSM
+Name[pt_BR]=Implementação da Placa GSM
+Name[ro]=Implementare card GSM
 Name[sk]=Implementácia karty GSM
 Name[sl]=Implementacija kartice GSM
 Name[sv]=GSM-kortimplementation
+Name[tr]=GSM Kart gerçekleştirmesi
+Name[uk]=Впровадження карток GSM
+Name[ven]=U ita garata ya GSM
 Name[xh]=GSM Uzalisekiso lwekhadi
 Name[xx]=xx
+Name[zh_CN]=GSM卡实现
 Name[zu]=Ukufakelwa kwe Khadi le GSM
