--- a/mimetypes/application/illustrator.desktop
+++ b/mimetypes/application/illustrator.desktop
@@ -5,16 +5,40 @@ MimeType=application/illustrator
 Icon=postscript
 Patterns=*.ai;*.AI;
 Comment=Adobe Illustrator Document
+Comment[ar]=مستند Adobe Illustrator
+Comment[be]=Дакумэнт Adobe Illustrator
+Comment[bg]=Нов документ на Adobe Illustrator
+Comment[bs]=Adobe Illustrator dokument
+Comment[cs]=Dokument Adobe Illustrator
 Comment[da]=Adobe Illustrator dokument
 Comment[de]=Adobe Illustrator-Dokument
+Comment[el]=Έγγραφο Adobe Illustrator
+Comment[eo]=Adobe-Ilustrilo-dokumento
 Comment[es]=Documento de ilustración de Adobe
+Comment[et]=Adobe Illustratori dokument
+Comment[eu]=Adobe Illustrator Dokumentua
+Comment[fi]=Adobe Illustrator asiakirja
 Comment[fr]=Document Adobe Illustrator
 Comment[he]=מסמך Adobe Illustrator
 Comment[hu]=Adobe Illustrator dokumentum
 Comment[it]=Documento Adobe Illustrator
+Comment[ja]=Adobe Illustratorドキュメント
 Comment[lt]=Adobe Illustrator dokumentas
 Comment[lv]=Adobe Ilustratora Dokuments
+Comment[nl]=Adobe Illustrator-document
+Comment[nn]=Adobe Illustrator-dokument
+Comment[pt]=Documento do Adobe Illustrator
+Comment[pt_BR]=Documento do Adobe Illustrator
+Comment[ro]=Document Adobe Illustrator
 Comment[sk]=dokument Adobe Illustrator
+Comment[sl]=Dokument za Adobe Illustrator
 Comment[sv]=Adobe Illustrator-dokument
 Comment[ta]=Adobe Illustrator ¬Å½õ
+Comment[th]=สร้างเอกสาร Illustrator ใหม่
+Comment[tr]=Adobe Illustrator Belgesi
+Comment[uk]=Документ Adobe Illustrator
+Comment[ven]=Manwalwa a u sumbedzisa a Adobe
+Comment[vi]=Tài liệu Adobe Illustrator
 Comment[xx]=xx
+Comment[zh_CN]=Adobe Illustrator 文档
+Comment[zu]=Umkhombisi Wedokhumenti ye Adobe
