--- a/mimetypes/application/pgp-encrypted.desktop
+++ b/mimetypes/application/pgp-encrypted.desktop
@@ -6,21 +6,36 @@ Icon=encrypted
 Patterns=
 Comment=PGP/MIME encrypted message header
 Comment[af]=pgp/mime encrypted boodskap opskrif
+Comment[ar]=ترويسة رسالة PGP/MIME المشفرة
+Comment[bs]=PGP/MIME kodirano zaglavlje poruke
+Comment[cs]=Hlavička zprávy šifrované pomocí PGP/MIME
 Comment[da]=PGP/MIME-hoveddel for indkodet brev 
 Comment[de]=Nachrichtenvorspann mit PGP/MIME verschlüsseln
+Comment[el]=PGP/MIME κρυπτογραφημένη επικεφαλίδα μηνύματος
+Comment[eo]=PGP/MIME-ĉifrita mesaĝokapo
 Comment[es]=Cabecera de mensaje cifrado PGP/MIME
+Comment[eu]=PGP/MIME mezu enkriptatuaren burua
 Comment[fi]=PGP/MIME salattu viestiotsikko
 Comment[fr]=En-tête de message crypté PGP/MIME
 Comment[he]=כותרת הודעה מוצפנת של PGP/MIME
 Comment[hu]=PGP/MIME titkosított üzenetfejléc
+Comment[it]=Intestazione messaggio cifrato PGP/MIME
+Comment[ja]=PGP/MIME符号化されたメッセージヘッダー
 Comment[lt]=PGP/MIME šifruotos žinutės antraštė
 Comment[lv]=PGP/MIME šifrēta ziņojuma galvene
-Comment[nl]=PGP/MIME-gecodeerd berichthoofd
+Comment[nl]=PGP/MIME-versleuteld berichthoofd
 Comment[nn]=PGP/MIME-kryptert meldingshovud
 Comment[pt]=Cabeçalho de mensagem cifrada de PGP/MIME
-Comment[pt_BR]=Cabeçalho de mensagem cifrada de PGP/MIME
+Comment[pt_BR]=cabeçalho da mensagem criptografada PGP/MIME
+Comment[ro]=Antet mesaj criptat PGP/MIME
 Comment[sk]=Šifrovaná hlavička správy PGP/MIME
 Comment[sl]=S PGP/MIME kriptirana glava sporočila
 Comment[sv]=PGP/MIME-krypterat meddelandehuvud
 Comment[ta]=PGP/MIME ºí§¸¾î ¦ºö¾¢ò ¾¨ÄôÒ
+Comment[th]=ถอดรหัส PGP/MIME ของส่วนหัวจดหมาย
+Comment[tr]=PGP/MIME şifrelenmiş ileti başlığı
+Comment[uk]=Заголовок PGP/MIME зашифрованого повідомлення
+Comment[ven]=Thoho ya mulaedza ya PGP/MIME
 Comment[xx]=xx
+Comment[zh_CN]=PGP/MIME 加密邮件头
+Comment[zu]=Umyalezo wezindaba wokusebenzisa ikhanda loxhumaniso lwePGP/MIME
