--- a/mimetypes/application/pgp-signature.desktop
+++ b/mimetypes/application/pgp-signature.desktop
@@ -6,19 +6,35 @@ Icon=signature
 Patterns=
 Comment=Detached OpenPGP signature
 Comment[af]=ontkoppel openpgp handtekening
+Comment[ar]=روقيع OpenPGP المستقل
+Comment[bs]=Odvojeni OpenPGP potpis
+Comment[cs]=Samostatný podpis OpenPGP
 Comment[da]=Løsreven OpenPGP-underskrift
+Comment[de]=OpenPGP-Signatur
+Comment[el]=Αποκολλημένη υπογραφή OpenPGP
+Comment[eo]=Deligita OpenPGP-subskribo
 Comment[es]=Firma suelta OpenPGP
+Comment[eu]=OpenPGP sinadura desuztartua
 Comment[fi]=Liitetty OpenPGP allekirjoitus
 Comment[fr]=Signature OpenPGP détachée
 Comment[he]=חתימה מופרדת של OpenPGP
 Comment[hu]=Leválasztott OpenPGP-aláírás
+Comment[it]=Firma OpenPGP separata
+Comment[ja]=切り離されたOpenPGP
 Comment[lt]=Atskiras OpenPGP parašas
 Comment[lv]=Pievienots OpenPGP paraksts
-Comment[nl]=Detached OpenPGP-signatuur
+Comment[nl]=detached OpenPGP-signatuur
 Comment[nn]=Fråkopla OpenPGP-signatur
 Comment[pt]=Assinatura separada do OpenPGP
-Comment[pt_BR]=Assinatura separada do OpenPGP
+Comment[pt_BR]=Assinatura OpenPGP separada
+Comment[ro]=Semnătură detaşată OpenPGP
 Comment[sk]=Oddelený podpis OpenPGP
 Comment[sl]=Izločen podpis OpenPGP
-Comment[sv]=Avskilld OpenPGP-signatur
+Comment[sv]=Avskild OpenPGP-signatur
+Comment[th]=แยกลายเซ็นต์ OpenPGP ที่แนบมา
+Comment[tr]=Ayrılmış OpenPGP imzası
+Comment[ven]=Tsaino ya tumanywaho na PGP yo vuleaho
+Comment[vi]=Detached chữ kí  OpenPGP 
 Comment[xx]=xx
+Comment[zh_CN]=分离的 OpenPGP 签名
+Comment[zu]=Unganyamanisi ukusayina kwe OpenPGP
