--- a/mimetypes/application/x-mswrite.desktop
+++ b/mimetypes/application/x-mswrite.desktop
@@ -5,23 +5,41 @@ Type=MimeType
 MimeType=application/x-mswrite
 Patterns=*.wri;*.WRI;
 Comment=Microsoft Write document
+Comment[ar]=مستند مايكروسوفت رايت
+Comment[be]=Дакумэнт Microsoft Write
+Comment[bg]=Документ на Microsoft Write
+Comment[bs]=Microsoft Write dokument
+Comment[cs]=Dokument programu Microsoft Write
 Comment[da]=Microsoft Write-dokument
 Comment[de]=MS-Write-Dokument
+Comment[el]=Έγγραφο Microsoft Write
+Comment[eo]=Mikrosoft-Write-dokumento
 Comment[es]=Documento de Microsoft Write
+Comment[et]=Microsoft Write'i dokument
+Comment[eu]=Microsoft Word dokumentua
 Comment[fi]=Microsoft Write -asiakirja
 Comment[fr]=Document MS-Write
 Comment[he]=מסמך Microsoft Write
 Comment[hu]=Microsoft Write dokumentum
 Comment[it]=Documento Microsoft Write
+Comment[ja]=Microsoft Writeドキュメント
 Comment[lt]=Microsoft Write dokumentas
 Comment[lv]=Microsoft Write dokuments
 Comment[nl]=Microsoft Write-document
 Comment[nn]=Microsoft Write-dokument
 Comment[pt]=Documento do Microsoft Write
 Comment[pt_BR]=Documento do Microsoft Write
+Comment[ro]=Document Microsoft Write
 Comment[sk]=dokument Microsoft Word
 Comment[sl]=Dokument za Microsoft Write
 Comment[sv]=Microsoft Write-dokument
 Comment[ta]=¨Áì§Ã¡º¡ôð ¨Ãð ¬Å½õ
+Comment[th]=เอกสารไมโครซอฟต์ไรต์
 Comment[tr]=Microsoft Write belgesi
+Comment[uk]=Документ Microsoft Write
+Comment[ven]=Manwalwa a microsoft au nwala
+Comment[vi]=Tài liệu Microsoft Write
+Comment[xh]=Uxwebhhu Legama le Microsoft
 Comment[xx]=xx
+Comment[zh_CN]=微软 Write 文档
+Comment[zu]=Idokhumente ye Microsoft Word
