--- a/mimetypes/application/x-pkcs7-signature.desktop
+++ b/mimetypes/application/x-pkcs7-signature.desktop
@@ -5,16 +5,36 @@ MimeType=application/x-pkcs7-signature
 Icon=signature
 Patterns=*.p7s;*.P7S
 Comment=Detached S/MIME signature
+Comment[ar]=توقيع S/MIME المستقل
+Comment[bg]=Отделена S/MIME сигнатура
+Comment[bs]=Odvojeni S/MIME potpis
+Comment[cs]=Samostatný podpis S/MIME
 Comment[da]=Løsreven S/MIME-underskrift
+Comment[de]=S/MIME-Signatur
+Comment[el]=Αποκολλημένη υπογραφή S/MIME
+Comment[eo]=Deligita S/MIME-subskribo
 Comment[es]=Firma suelta S/MIME
+Comment[eu]=S/MIME sinadura desuztartua
 Comment[fi]=Liitetty S/MIME allekirjoitus
 Comment[fr]=Signature S/MIME détachée
 Comment[he]=חתימת S/MIME מופרדת
 Comment[hu]=Leválasztott S/MIME-aláírás
+Comment[it]=Firma S/MIME separata
+Comment[ja]=切り離されたS/MIME 署名
 Comment[lt]=Atskiras S/MIME parašas
 Comment[lv]=Pievienots S/MIME paraksts
+Comment[nl]=detached S/MIME-signatuur
+Comment[nn]=Fråkopla S/MIME-signatur
 Comment[pt]=Assinatura separada de S/MIME
-Comment[pt_BR]=Assinatura separada de S/MIME
+Comment[pt_BR]=Assinatura S/MIME separada
+Comment[ro]=Semnătură detaşată S/MIME
 Comment[sk]=Oddelený podpis S/MIME
+Comment[sl]=Izločen podpis S/MIME
 Comment[sv]=Frånkopplad S/MIME-signatur
+Comment[th]=แยกลายเซ็น S/MIME ที่แนบมา
+Comment[tr]=Ayrılmış S/MIME imzası
+Comment[ven]=Tsaino yo tumanywaho ya S/MIME
+Comment[vi]=Lọc chữ kí S/MIME 
 Comment[xx]=xx
+Comment[zh_CN]=分离的 S/MIME 签名
+Comment[zu]=Ukungamanyanisi kokusayina kwe S/MIME
