--- a/mimetypes/application/x-tgif.desktop
+++ b/mimetypes/application/x-tgif.desktop
@@ -1,6 +1,37 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=TGIF Document
+Comment[ar]=مستند TGIF
+Comment[be]=Дакумэнт TGIF
+Comment[bg]=Документ на TGIF
+Comment[bs]=TGIF dokument
+Comment[cs]=Dokument TGIFu
+Comment[da]=TGIF Dokument
+Comment[de]=TGIF-Dokument
+Comment[eo]=TGif-dokumento
+Comment[es]=Documento TGIF
+Comment[eu]=TGIF Dokumentua
+Comment[fi]=TGIF-asiakirja
+Comment[fr]=Document TGif
+Comment[he]=מסמך TGIF
+Comment[hu]=TGIF dokumentum
+Comment[it]=Documento TGIF
+Comment[ja]=TGIF ドキュメント
+Comment[lt]=TGIF dokumentas
+Comment[nl]=TGIF-document
+Comment[nn]=TGIF-dokument
+Comment[pt]=Documento TGIF
+Comment[pt_BR]=Documento TGIF
+Comment[ro]=Document TGIF
+Comment[sk]=TGIF dokument
+Comment[sl]=Dokument TGIF
+Comment[sv]=TGIF-dokument
+Comment[th]=เอกสาร TGIF
+Comment[uk]=Документ TGIF
+Comment[ven]=Manwalwa a TGIF
+Comment[vi]=Tài liệu TGIF
+Comment[zh_CN]=TGIF 文档
+Comment[zu]=Idokhumente ye TGIF
 MimeType=application/x-tgif
 Type=MimeType
 Icon=vectorgfx
