--- a/mimetypes/application/x-zerosize.desktop
+++ b/mimetypes/application/x-zerosize.desktop
@@ -1,6 +1,37 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Empty Document
+Comment[ar]=مستند فارغ
+Comment[be]=Пусты дакумэнт
+Comment[bg]=Празен Документ
+Comment[bs]=Prazan dokument
+Comment[cs]=Prázdný dokument
+Comment[da]=Tomt dokument
+Comment[de]=Leeres Dokument
+Comment[eo]=Malplena dokumento
+Comment[es]=Documento vacío
+Comment[eu]=Dokumentu Hutsik
+Comment[fi]=Tyhjä asiakirja
+Comment[fr]=Document vide
+Comment[he]=מסמך ריק
+Comment[hu]=Üres dokumentum
+Comment[it]=Documento vuoto
+Comment[ja]=空のドキュメント
+Comment[lt]=Tuščias dokumentas
+Comment[nl]=leeg document
+Comment[nn]=Tomt dokument
+Comment[pt]=Documento Vazio
+Comment[pt_BR]=Documento Vazio
+Comment[ro]=Document gol
+Comment[sk]=Prázdny dokument
+Comment[sl]=Prazen dokument
+Comment[sv]=Tomt dokument
+Comment[th]=เอกสารเปล่า
+Comment[uk]=Порожній документ
+Comment[ven]=Manwalwa asi na tshithu
+Comment[vi]=Tài liệu trống
+Comment[zh_CN]=空文档
+Comment[zu]=Idokhumente Engenalutho
 MimeType=application/x-zerosize
 Type=MimeType
 Icon=mime_empty
