--- a/mimetypes/image/x-portable-greymap.desktop
+++ b/mimetypes/image/x-portable-greymap.desktop
@@ -5,11 +5,33 @@ MimeType=image/x-portable-bitmap
 Icon=image
 Patterns=*.pgm;
 Comment=Portable Graymap File Format
+Comment[ar]=نسق لمف Portable Graymap
+Comment[bg]=Портативен файлов формат за Graymap
 Comment[bs]=Portable Greymap File format
-Comment[es]=Formato de archivo portable Greymap
+Comment[cs]=Formát "Portable Graymap File"
+Comment[da]=Portable Graymap Filformat
+Comment[de]=Portierbares Greymap-Format
+Comment[en_GB]=Portable Greymap File Format
+Comment[eo]=Portebla griza grafiko (PGM)
+Comment[es]=Formato de archivo portable Graymap
+Comment[eu]=Graymap Fitxategi Formato Eramangarria
+Comment[fi]=Portable Graymap tiedostomuoto
+Comment[fr]=Format Portable Greymap
 Comment[he]=תבנית קובץ מפת גווני אפור ניידת
-Comment[hu]=Portable Greymap fájlformátum
-Comment[nl]=overdraagbare greymap bestandsformaat
-Comment[pt]=Formato Portável de 'Greymaps'
-Comment[pt_BR]=Formato Portável de 'Greymaps'
+Comment[hu]=Portable Graymap fájlformátum
+Comment[it]=Formato Portable Graymap
+Comment[ja]=ポータブルグレイマップファイルフォーマット
+Comment[lt]=Perkeliamas graymap bylų formatas
+Comment[nl]=overdraagbaar greymap-bestandsformaat
+Comment[nn]=Portable Graymap File-format
+Comment[pt]=Formato Portável de 'Graymaps'
+Comment[pt_BR]=Formato de Arquivo de Mapas de Escalas Cinza Portável
+Comment[ro]=Imagine în nuanţe de gri în format portabil
+Comment[sk]=Formát Portable Graymap File
+Comment[sl]=Prenosljiva sivinska datotečna vrsta
 Comment[sv]=Flyttbart gråskalefilformat
+Comment[th]=แฟ้มภาพ Portable Graymap
+Comment[uk]=Мобільний формат файлів graymap
+Comment[ven]=Vhuvha ha faela ya Graymap yau farea
+Comment[zh_CN]=Portable Graymap 文件格式
+Comment[zu]=Ifomathi Yefayela Yephathekayo i Graymephu
