--- a/mimetypes/image/x-portable-pixmap.desktop
+++ b/mimetypes/image/x-portable-pixmap.desktop
@@ -5,3 +5,34 @@ MimeType=image/x-portable-bitmap
 Icon=image
 Patterns=*.ppm;
 Comment=Portable Pixmap File Format
+Comment[ar]=نسق لمف Portable Pixmap
+Comment[bg]=Портативен файлов формат за Pixmap
+Comment[bs]=Portable Pixmap File format
+Comment[cs]=Formát "Portable Pixmap File"
+Comment[da]=Portable Pixmap filformat
+Comment[de]=Portierbares Pixmap-Format
+Comment[el]=Τύπος Αρχείου Portable Pixmap
+Comment[eo]=Portebla grafiko (PPM)
+Comment[es]=Formato de archivo portable Pixmap
+Comment[eu]=Pixmap Fitxategi Formato Eramangarria
+Comment[fi]=Portable Pixmap tiedostomuoto
+Comment[fr]=Format Portable Pixmap
+Comment[he]=תבנית קובץ תמונה ניידת
+Comment[hu]=Portable Pixmap fájlformátum
+Comment[it]=Formato Portable Pixmap
+Comment[ja]=ポータブルピックスマップファイルフォーマット
+Comment[lt]=Perkeliamas taškinės grafikos (pixmap) bylų formatas
+Comment[nl]=Overdraagbare pixmap bestandsformaat
+Comment[nn]=Portable Pixmap File-format
+Comment[pt]=Formato Portável de 'Pixmaps'
+Comment[pt_BR]=Formato de Arquivo Pixmap Portável
+Comment[ro]=Imagine pixmap în format portabil
+Comment[sk]=Formát Portable Pixmap File
+Comment[sl]=Prenosljiva slikovna datotečna vrsta
+Comment[sv]=Flyttbart pixmappfilformat
+Comment[th]=แฟ้มภาพ Portable Pixmap
+Comment[uk]=Мобільний формат файлів pixmap
+Comment[ven]=Vhuvha ha faela ya Pixmap yau farea
+Comment[xx]=xx
+Comment[zh_CN]=Portable Pixmap 文件格式
+Comment[zu]=Ifomathi Yefayela Yephathekayo i Pixmephu
