--- a/mimetypes/text/x-xslt.desktop
+++ b/mimetypes/text/x-xslt.desktop
@@ -1,20 +1,38 @@
 [Desktop Entry]
 Comment=XSLT Stylesheet file
+Comment[ar]=ملف ورقة نمط XSLT
 Comment[be]=Табліца стыляў XSLT
+Comment[bs]=XSLT Stylesheet datoteka
+Comment[cs]=Soubor se stylem XSLT
 Comment[da]=XSLT Stilarkfil
 Comment[de]=XSLT-Stilvorlage
+Comment[el]=Αρχείο XSLT Stylesheet
+Comment[eo]=XSLT-dosiero
 Comment[es]=Archivo de hoja de estilo XSLT
+Comment[eu]=XSLT Estilo Orria fitxategia
 Comment[fi]=XSLT tyylitiedosto
 Comment[fr]=Feuille de style XSLT
 Comment[he]=קובץ גיליון סגנון XSLT
 Comment[hu]=XSLT stíluslap
+Comment[it]=Foglio di stile XSLT
+Comment[ja]=XSLTスタイルシートファイル
 Comment[lt]=XSLT stiliaus aprašymo byla
 Comment[lv]=XSLT Stilutabulas fails
 Comment[nl]=XSLT stijlblad-bestand
+Comment[nn]=XSLT-stilsettfil
 Comment[pt]=Transformação XSLT
 Comment[pt_BR]=Arquivo de Folha de Estilo XSLT
+Comment[ro]=Fişier de stil XSLT
 Comment[sk]=Súbor štýlu XSLT stylesheet
+Comment[sl]=Datoteka s slogom XSLT
 Comment[sv]=XSLT-stilmallsfil
+Comment[th]=แฟ้ม XSLT Stylesheet
+Comment[tr]=XSLT Stylesheet dosyası
+Comment[uk]=Файли таблиці стилів XSLT
+Comment[ven]=Faela ya tshitaela tsha bammbiri ya XSLT
+Comment[xx]=xx
+Comment[zh_CN]=XSLT 风格表单文件
+Comment[zu]=Ifayela Lephepha lesitayela se XSLT
 Icon=xslt
 MimeType=text/x-xslt
 Patterns=*.xslt;
