--- a/kio/kdatatool.desktop
+++ b/kio/kdatatool.desktop
@@ -6,24 +6,37 @@ Comment=KDE Data Tool
 Comment[af]=kde data program
 Comment[ar]=أداة KDE للبيانات
 Comment[az]=KDE Verilənlər Vasitəsi
+Comment[bs]=KDE alat za podatke
+Comment[cs]=Datový nástroj KDE
 Comment[da]=KDE dataværktøj
 Comment[de]=KDE-Datenprogramm
+Comment[el]=Εργαλείο Δεδομένων του KDE
+Comment[eo]=Datumilo
 Comment[es]=Herramienta KDE de datos
+Comment[eu]=KDE Data Tresna
 Comment[fr]=Outil de données KDE
 Comment[he]=כלי נתונים של KDE
 Comment[hu]=KDE adatkezelő segédprogram
+Comment[it]=Strumenti dati di KDE
+Comment[ja]=KDEデータツール
 Comment[lt]=KDE duomenų priemonė
 Comment[lv]=KDE Datu Rīks
 Comment[nl]=KDE Data-gereedschap
 Comment[nn]=KDE Dataverktøy
 Comment[pt]=Ferramenta de Dados do KDE
 Comment[pt_BR]=Ferramenta de Dados do KDE
+Comment[ro]=Utilitar de date KDE
 Comment[sk]=Dátový nástroj KDE
 Comment[sl]=Podatkovno orodje za KDE
 Comment[sv]=KDE-dataverktyg
+Comment[th]=เครื่องมือข้อมูลของ KDE
 Comment[tr]=KDE Veri Aracı
+Comment[uk]=Засіб роботи з даними KDE
+Comment[ven]=Tshishumiswa tsha data tsha KDE
+Comment[vi]=Công cụ KDE Data
 Comment[xh]=KDE Isixhobo se Data
 Comment[xx]=xx
+Comment[zh_CN]=KDED 数据工具
 Comment[zu]=KDE Ithuluzi Ledata
 
 [PropertyDef::Commands]
