--- a/kio/misc/kssld/kssld.desktop
+++ b/kio/misc/kssld/kssld.desktop
@@ -10,44 +10,71 @@ X-KDE-Kded-load-on-demand=true
 Name=KSSL Daemon Module
 Name[ar]=وحدة مراقب KSSL
 Name[az]=KSSL Demon Modulu
+Name[bg]=KSSL Демон - Модули
+Name[cs]=Modul démona KSSL
 Name[da]=KSSL Dæmonmodul
 Name[de]=KSSL Daemon Modul
+Name[el]=Άρθρωμα Δαίμονα KSSL
+Name[eo]=SSL-demono-modulo
 Name[es]=Módulo de demonio KSSL
+Name[eu]=KSSL Demonioa Modulua
 Name[fi]=KSSL palvelinmoduli
-Name[fr]=Module démon kSSL
+Name[fr]=Module démon KSSL
 Name[he]=מודול תהליך שירות ה-SSL
 Name[hu]=KSSL szolgáltatásmodul
+Name[it]=Modulo demone KSSL
+Name[ja]=KSSL デーモンモジュール
 Name[lt]=KSSL demono modulis
 Name[lv]=KSSL Dēmona Modulis
 Name[nn]=KSSL Daemon-modul
 Name[pt]=Módulo do Servidor de KSSL
 Name[pt_BR]=Módulo do Serviço do KSSL
+Name[ro]=Modul demon KSSL
 Name[sk]=Modul démona KSSL
 Name[sl]=Strežniški modul KSSL
 Name[sv]=KSSL-demonmodul
+Name[th]=โมดูลเซิร์ฟเวอร์ KSSL
 Name[tr]=KSSL Program Modülü
+Name[uk]=Модуль демону KSSL
+Name[ven]=Modulu wa Daemon wa KSSL
 Name[xh]=KSSL Daemon Umnqongo
 Name[xx]=xx
+Name[zh_CN]=KSSL 进程模块
 Name[zh_TW]=KSSL 服務程式模組
 Comment=KSSL Daemon Module for KDED
 Comment[ar]=وحدة مراقب KSSL لـKDED
 Comment[az]=KDED üçün KSSL Demon Modulu
+Comment[bg]=KSSL Демон - Модул за KDED
+Comment[bs]=KSSL Daemon Module za KDED
+Comment[cs]=Modul démona KSSL pro KDED
 Comment[da]=KSSL Dæmonmodul for KDED
 Comment[de]=KSSL-Dämonmodul für KDED
+Comment[el]=Άρθρωμα Δαίμονα KSSL για το KDED
+Comment[eo]=SSL-demono-modulo por KDED
 Comment[es]=Módulo de demonio KSSL para KDED
+Comment[eu]=KSSL Demonio Modulua KDEDrako
 Comment[fi]=KSSL palvelinmoduli KDED:lle
-Comment[fr]=Module démon kSSL pour KDED
+Comment[fr]=Module démon KSSL pour KDED
 Comment[he]=מודול תהליך שירות SSL ל-KDED
 Comment[hu]=KSSL szolgáltatásmodul a KDED-hez
+Comment[it]=Modulo demone KSSL per KDED
+Comment[ja]=KDED用のKSSLデーモンモジュール
 Comment[lt]=KSSL demono modulis skirtas KDED
 Comment[lv]=KSSL Dēmona Modulis priekš KDED
 Comment[nl]=KSSL Daemon Module voor KDED
 Comment[nn]=KSSL Daemon-modul for KDED
 Comment[pt]=Um módulo do servidor de KSSL para o KDED
 Comment[pt_BR]=Um Módulo KSSL para o KDED
+Comment[ro]=Modul demon KSSL pentru KDED
 Comment[sk]=Modul démona KSSL pre KDED
 Comment[sl]=Strežniški modul KSSL za KDED
 Comment[sv]=KSSL-demonmodul för KDED
+Comment[th]=โมดูลเซิร์ฟเวอร์ KSSL สำหรับ KDED
+Comment[tr]=KDED için KSSL Modülü
+Comment[uk]=Модуль демону KSSL для KDED
+Comment[ven]=Modulu wa Daemon wa KSSL ya KDED
+Comment[vi]=KSSL Daemon Module cho KDED
 Comment[xh]=KSSL Daemon Umnqongo we KDED
 Comment[xx]=xx
+Comment[zh_CN]=KDED 的 KSSL 进程模块
 Comment[zh_TW]=KDED 使用的 SSL 服務程式模組
