--- a/mimetypes/application/x-karbon.desktop
+++ b/mimetypes/application/x-karbon.desktop
@@ -8,16 +8,23 @@ Comment[az]=Karbon14 Sənədi
 Comment[be]=Дакумэнт Karbon14
 Comment[bg]=Документ Karbon14
 Comment[bs]=Karbon14 dokument
+Comment[cs]=Dokument Karbon14
 Comment[da]=Karbon14-dokument
 Comment[de]=Karbon14-Dokument
+Comment[el]=Έγγραφο Karbon14
+Comment[eo]=Karbon14-dokumento
 Comment[es]=Documento de Karbon14
+Comment[et]=Karbon14 dokument
+Comment[eu]=Karbon14 Dokumentua
 Comment[fi]=Karbon14-asiakirja
 Comment[fr]=Document Karbon14
 Comment[he]=מסמך Karbon14
 Comment[hu]=Karbon14 dokumentum
 Comment[it]=Documento Karbon14
+Comment[ja]=Karbon14 ドキュメント
 Comment[lt]=Karbon14 dokumentas
 Comment[lv]=Karbon14 Dokuments
+Comment[nn]=Karbon14-dokument
 Comment[pt]=Documento do Karbon14
 Comment[pt_BR]=Documento Karbon
 Comment[ro]=Document Karbon14
@@ -25,8 +32,13 @@ Comment[sk]=Dokument darbon14
 Comment[sl]=Dokument za Karbon14
 Comment[sv]=Karbon14-dokument
 Comment[ta]=Karbon14 ¬Å½õ
+Comment[th]=เอกสารของ AbiWord
 Comment[tr]=Karbon14 Belgesi
+Comment[uk]=Документ Karbon14
+Comment[ven]=Manwalwa a Karbon14
 Comment[xh]=Karbon14 Uxwebhu
 Comment[xx]=xx
+Comment[zh_CN]=Karbon14 文档
+Comment[zu]=Idokhumenti ye Karbon14
 Patterns=*.karbon;
 X-KDE-AutoEmbed=false
