--- a/mimetypes/application/x-lyx.desktop
+++ b/mimetypes/application/x-lyx.desktop
@@ -1,6 +1,37 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=LyX Document
+Comment[ar]=مستند LyX
+Comment[be]=Дакумэнт LyX
+Comment[bg]=Документ на LyX
+Comment[bs]=LyX dokument
+Comment[cs]=Dokument LyXu
+Comment[da]=LyX-dokument
+Comment[de]=LyX-Dokument
+Comment[eo]=LyX-dokumento
+Comment[es]=Documento de LyX
+Comment[eu]=LyX - dokumentua
+Comment[fi]=LyX -asiakirja
+Comment[fr]=Document LyX
+Comment[he]=מסמך LyX
+Comment[hu]=LyX dokumentum
+Comment[it]=Documento LyX
+Comment[ja]=Lyx ドキュメント
+Comment[lt]=LyX dokumentas
+Comment[nl]=LyX-document
+Comment[nn]=LyX-dokument
+Comment[pt]=Documento do LyX
+Comment[pt_BR]=Documento do Lyx
+Comment[ro]=Document LyX
+Comment[sk]=LyX dokument
+Comment[sl]=Dokument za LyX
+Comment[sv]=Lyx-dokument
+Comment[th]=เอกสาร Troff
+Comment[uk]=Документ LyX
+Comment[ven]=Manwalwa a LyX
+Comment[vi]=Tài liệu LYX
+Comment[zh_CN]=LyX 文档
+Comment[zu]=Idokhumente ye LyX
 MimeType=application/x-lyx
 Type=MimeType
 Icon=document
