--- a/mimetypes/application/x-x509-ca-cert.desktop
+++ b/mimetypes/application/x-x509-ca-cert.desktop
@@ -6,23 +6,36 @@ Icon=lock
 Patterns=*.der;*.cer;*.crt;*.cert;*.pem;
 Comment=DER, PEM, or Netscape encoded X.509 certificate
 Comment[az]=DER, PEM, ya da Netscape kodlamalı X.509 vəsiqəsi
+Comment[bs]=DER, PEM, ili Netscape kodirani X.509 certifikat
+Comment[cs]=Certifikát X.509 kódovaný DER, PEM, nebo Netscapem
 Comment[da]=DER, PEM, eller Netscape-indkodet X.509-certifikat
 Comment[de]=DER, PEM oder netscape-kodiertes X.509-Zertifikat
+Comment[el]=Πιστοποιητικό DER, PEM, ή Netscape κωδικοποιημένο X.509
+Comment[eo]=DERe, PEMe aŭ Netskape ĉifirta X.509-atestilo
 Comment[es]=DER, PEM, o certificado Netscape codificado X.509
+Comment[eu]=DER, PEM, edo Netscapek kodetutako X.509 ziurtagiria
 Comment[fi]=DER, PEM tai Netscape enkoodattu X.509 sertifikaatti
 Comment[fr]=Certificat X.509 encodé avec Netscape, DER ou PEM
 Comment[he]=תעודת DER, PEM, או תעודה מקודדת X.509 של Netscape
 Comment[hu]=DER, PEM vagy Netscape-formátumú X.509 tanúsítvány
 Comment[is]=DER, PEM eða Netscape kóðað X.509 skírteini
+Comment[it]=Certificato X.509 codificato con DER, PEM o Netscape
+Comment[ja]=DER, PEM, Netscape エンコードされた X.509 証明書
 Comment[lt]=DER, PEM, ar Netscape koduotas X.509 sertifikatas
 Comment[lv]=DER, PEM, vai Netscape kodēts X.509 sertifikāts
 Comment[nl]=DER, PEM, of Netscape encoded X.509 certificaat
 Comment[nn]=DER, PEM eller Netscape-koda X.509-sertifikat
 Comment[pt]=DER, PEM, ou certificado X.509 codificado pelo Netscape
 Comment[pt_BR]=DER, PEM, ou certificado X.509 codificado pelo Netscape
+Comment[ro]=Certificat DER, PEM sau Netscape codat X.509
 Comment[sk]=Certifikát X.509 kódovaný DER, PEM, alebo Netscape
 Comment[sl]=DER, PEM ali certifikat X.509, kodiran za Netscape
-Comment[sv]=DER-, PEM-, eller Netscape-kodat X.509-certificat
+Comment[sv]=DER-, PEM-, eller Netscape-kodat X.509-certifikat
+Comment[th]=ใบรับรอง DER, PEM, หรือ Netscape encoded X.509
+Comment[tr]=DER, PEM ya da Netscape şifrelenmiş X.509 sertifikası
+Comment[uk]=DER, PEM, або закодований Netscape сертифікат X.509
+Comment[ven]=DER, PEM, or Netscape encoded X.509 Sethifikheithi
+Comment[vi]=DER, PEM, hay  Netscape encoded X.509 certificate
 Comment[xh]=DER, PEM, okanye Netscape e enkhowudiweyo X.509 isiqinisekiso
 Comment[xx]=xx
 X-KDE-AutoEmbed=true
