--- a/mimetypes/image/x-portable-bitmap.desktop
+++ b/mimetypes/image/x-portable-bitmap.desktop
@@ -5,3 +5,33 @@ MimeType=image/x-portable-bitmap
 Icon=image
 Patterns=*.pbm
 Comment=Portable Bitmap File Format
+Comment[ar]=نسق لمف Portable Bitmap
+Comment[bs]=Portable Bitmap File format
+Comment[cs]= Formát "Portable Bitmap File"
+Comment[da]=Portable Bitmap filformat
+Comment[de]=Portierbares Bitmap-Format
+Comment[el]=Τύπος Αρχείου Portable Bitmap
+Comment[eo]=Portebla grafiko (PBM)
+Comment[es]=Formato de archivo Bitmap portable
+Comment[eu]=Bitmap Fitxategi Formato Eramangarria
+Comment[fi]=Portable Bitmap tiedostomuoto
+Comment[fr]=Format Portable Bitmap
+Comment[he]=תבנית קובץ מפת סיביות ניידת
+Comment[hu]=Portable Bitmap fájlformátum
+Comment[it]=Formato Portable Bitmap
+Comment[ja]=ポータブルビットマップファイルフォーマット
+Comment[lt]=Perkeliamas taškinės grafikos (bitmap) bylų formatas
+Comment[nl]=overdraagbaar bitmap bestandsformaat
+Comment[nn]=Portable Bitmap File-format
+Comment[pt]=Formato Portável de 'Bitmaps'
+Comment[pt_BR]=Formato de Arquvio Bitmap
+Comment[ro]=Imagine bitmap în format portabil
+Comment[sk]= Formát Portable Bitmap File
+Comment[sl]=Prenosljiva slikovna datotečna vrsta
+Comment[sv]=Flyttbart bitmappsfilformat
+Comment[th]=แฟ้มภาพ Portable Bitmap
+Comment[uk]=Мобільний формат файлів bitmap
+Comment[ven]=Muiti wa Bitimepe
+Comment[xx]=xx
+Comment[zh_CN]=Portable Bitmap 文件格式
+Comment[zu]=Ifomathi Yefayela Yephathekayo i Bitmap
