--- a/mimetypes/multipart/mixed.desktop
+++ b/mimetypes/multipart/mixed.desktop
@@ -4,3 +4,34 @@ Type=MimeType
 MimeType=multipart/mixed
 Patterns=
 Comment=Compound documents
+Comment[ar]=مستند مركب
+Comment[bg]=Съставяне на Документи
+Comment[bs]=Kombinirani dokumenti
+Comment[cs]=Složené dokumenty
+Comment[da]=Sammensatte dokumenter
+Comment[de]=Zusammengesetzte-Dokumente
+Comment[eo]=Kombinita-dokumento
+Comment[es]=Documentos compuestos
+Comment[eu]=Compound dokumentuak
+Comment[fi]=Yhdistelmäasiakirjat
+Comment[fr]=Document composé
+Comment[he]=מסמכים מורכבים
+Comment[hu]=Összetett dokumentumok
+Comment[it]=Documenti composti
+Comment[ja]=合成ドキュメント
+Comment[lt]=Sudėtiniai dokumentai
+Comment[nl]=Samengestelde documenten
+Comment[nn]=Samansette dokument
+Comment[pt]=Documentos compostos
+Comment[pt_BR]=Documento Componente
+Comment[ro]=Documente compuse
+Comment[sk]=Zložené dokumenty
+Comment[sl]=Sestavljeni dokumenti
+Comment[sv]=Sammansatta dokument
+Comment[th]=เอกสารประกอบ
+Comment[uk]=Складені документи
+Comment[ven]=Manwalwa a Khomuphaundu
+Comment[vi]=Tài liệu compound
+Comment[xx]=xx
+Comment[zh_CN]=复合文档
+Comment[zu]=Amadokhumenti Okuhlanganisiweyo
