--- a/mimetypes/multipart/x-mixed-replace.desktop
+++ b/mimetypes/multipart/x-mixed-replace.desktop
@@ -4,3 +4,35 @@ Type=MimeType
 MimeType=multipart/x-mixed-replace
 Patterns=
 Comment=Stream of data (server push)
+Comment[ar]=سلسلة من البيانات (دفع من الخادم)
+Comment[bg]=Течение на данни (server push)
+Comment[bs]=Protok podataka (stream - server push)
+Comment[cs]=Proud dat (server push)
+Comment[da]=Strøm af data (skubbet af server)
+Comment[de]=Datenstrom (Server Push)
+Comment[el]=Ροή από δεδομένα (προώθηση διακομιστή)
+Comment[eo]=Datumfluo (servosendata)
+Comment[es]=Flujo de datos (envio del servidor)
+Comment[eu]=Datu korrontea (zerbitzaria puxatu)
+Comment[fi]=Tietovirta (palvelin työntää)
+Comment[fr]=Flux de données (serveur push)
+Comment[he]=זרימת נתונים (דחיפת שרת)
+Comment[hu]=Sugárzott adatfolyam (kiszolgálóról)
+Comment[it]=Flusso di dati (server push)
+Comment[ja]=データストリーム (サーバプッシュ)
+Comment[lt]=Duomenų srautas (perduodamas serverio)
+Comment[nl]=data-stream (server push)
+Comment[nn]=Datastraum (frå tenar)
+Comment[pt]=Sequência de dados (envio do servidor)
+Comment[pt_BR]=Cadeia de dados (server push)
+Comment[ro]=Flux de date (de la server)
+Comment[sk]=Prúd dát (server push)
+Comment[sl]=Tok podatkov (potisk strežnika)
+Comment[sv]=Dataström (skickas av servern)
+Comment[th]=สตรีมของข้อมูล (เซิร์ฟเวอร์ push)
+Comment[uk]=Потік даних (вивід з сервера)
+Comment[ven]=Milambo ya data (U phusha ha data)
+Comment[vi]=Stream của dữ liệu ( server push)
+Comment[xx]=xx
+Comment[zh_CN]=数据流(服务器推)
+Comment[zu]=Ukutanta kwedata (ukududula komlekeleli)
