--- a/mimetypes/text/x-adasrc.desktop
+++ b/mimetypes/text/x-adasrc.desktop
@@ -2,26 +2,42 @@
 Encoding=UTF-8
 Comment=Ada sources
 Comment[af]=ada bronkodes
+Comment[ar]=شغرة Ada
 Comment[az]=Ada mənbələri
+Comment[bg]=Ada източници
+Comment[bs]=Ada izvorni kod
 Comment[cs]=Zdrojový kód v jazyku Ada
 Comment[da]=Ada-kilder
 Comment[de]=Ada-Quellen
+Comment[el]=Πηγές Ada
+Comment[eo]=Ada-fontoj
 Comment[es]=Fuentes Ada
+Comment[et]=Ada lähtetekst
+Comment[eu]=Ada kodea
 Comment[fi]=Ada-lähdekoodi
 Comment[fr]=Fichier source Ada
 Comment[he]=קודי מקור של Ada
 Comment[hu]=Ada forrásfájl
 Comment[it]=Sorgenti Ada
+Comment[ja]=Adaソース
 Comment[lt]=Ada išeities tekstai
 Comment[lv]=Ada avoti
 Comment[nl]=Ada-bronnen
 Comment[nn]=Ada-kjelde
 Comment[pt]=Código Ada
-Comment[pt_BR]=Código Ada
+Comment[pt_BR]=Fontes Ada
+Comment[ro]=Surse Ada
 Comment[sk]=Zdrojový kód Ada
 Comment[sl]=Izvorna koda Ada
 Comment[sv]=Ada-källkod
+Comment[th]=ต้นฉบับโปรแกรมภาษา Ada
+Comment[tr]=Ada kaynak kodları
+Comment[uk]=Вихідні файли Ada
+Comment[ven]=Zwishumiswa zwa Ada
+Comment[xh]=Iimvelaphi zeAda 
 Comment[xx]=xx
+Comment[zh_CN]=Ada 源文件
+Comment[zu]=Izimvelaphi ze Ada
 Icon=source_cpp
 Type=MimeType
 MimeType=text/x-adasrc
