--- a/mimetypes/text/x-xslfo.desktop
+++ b/mimetypes/text/x-xslfo.desktop
@@ -2,20 +2,37 @@
 Comment=XSL Formating Object file
 Comment[ar]=ملف الهيئة الهدفية ل XSL
 Comment[bg]=XSL - Файл за форматиране на Обекти
+Comment[bs]=XSL datoteka (objekat za formatiranje)
+Comment[cs]=Soubor XSL Formating Object
 Comment[da]=XSL Formatering af objektfil
 Comment[de]=Objektdatei für die XSL-Formatierung
+Comment[el]=Αρχείο XSL Formating Object
+Comment[eo]=XSL-dosiero kun formatobjektoj
 Comment[es]=Archivo de objeto de formato XSL
+Comment[eu]=XSL Formatuarekin Objektu Fitxategia
 Comment[fi]=XSL muotoinen objektitiedosto
 Comment[fr]=Fichier de formatage d'objet XSL
 Comment[he]=קובץ אובייקט עיצוב XSL
 Comment[hu]=XSL-formázási objektumfájl
+Comment[it]=File XSL Formatting Object
+Comment[ja]=XSLフォーマットオブジェクトファイル
 Comment[lt]=XSL Formating Object byla
 Comment[lv]=XSL Formatēšanas Objektu Fails
 Comment[nl]=XSL-Formatterings-Object-bestand
+Comment[nn]=XSL-formatobjektfil
 Comment[pt]=Ficheiro XSL Formatting Object
 Comment[pt_BR]=Arquivo Objeto XSL 
+Comment[ro]=Fişier XSL în format obiect
 Comment[sk]=Objektový súbor formátovania XSL
+Comment[sl]=Objektna datoteka za XSLT formatiranje
 Comment[sv]=XSL-formateringsobjektfil
+Comment[th]=แฟ้ม XSL Formating Object
+Comment[tr]=XSL Düzenleme Nesne Dosyası
+Comment[uk]=Об'єктний файл форматування XSL
+Comment[ven]=Vhuvha ha Faela ya tshithu ya XSL
+Comment[xx]=xx
+Comment[zh_CN]=XSL 格式对象文件
+Comment[zu]=Into Yokufomatha ifayela le XSL
 Icon=xslfo
 MimeType=text/x-xslfo
 Patterns=*.fo;*.xslfo
