--- a/mimetypes/application/x-zoo.desktop
+++ b/mimetypes/application/x-zoo.desktop
@@ -8,6 +8,7 @@ Comment=Zoo archive
 Comment[af]=zoo argief
 Comment[ar]=أرشيف Zoo
 Comment[az]=Zoo arxivi
+Comment[be]=Архіў Zoo
 Comment[bg]=Архив на zoo
 Comment[br]=Diell Zoo
 Comment[bs]=Zoo arhiva
@@ -42,14 +43,17 @@ Comment[oc]=Archiu zoo
 Comment[pl]=Archiwum Zoo
 Comment[pt]=Arquivo Zoo
 Comment[pt_BR]=Pacote Zoo
+Comment[ro]=Arhivă Zoo
 Comment[ru]=Архив zoo
 Comment[sk]=Zoo archív
 Comment[sl]=Arhiv Zoo
 Comment[sr]=ZOO arhiva
 Comment[sv]=Zoo-arkiv
 Comment[ta]=Zoo ¸¡ôÀ¸õ
+Comment[th]=แฟ้มบีบอัด Zoo
 Comment[tr]=Zoo arşivi
 Comment[uk]=Архів Zoo
+Comment[ven]=Fhethu hau vhulungela zwithu zwa kale ho vhewaho zwipuka
 Comment[vi]=File nén kiểu Zoo 
 Comment[xh]=Ushicilelo lukawonke-wonke lwendawo egcina izilwanyane
 Comment[xx]=xx
