--- a/arts/configure.in.in
+++ b/arts/configure.in.in
@@ -100,7 +100,7 @@ dnl no need to, AC_BASE_PATH_KDE does it for us already (see also
 dnl comment below for mcopidl)
 dnl AC_PATH_PROG(ARTSCCONFIG, artsc-config, no)
 
-ARTS_WANT_VERSION=1.0.0
+ARTS_WANT_VERSION=1.0.x
 ARTS_HAVE_VERSION=none
 ARTS_HAVE_PREFIX=none
 
@@ -114,7 +114,8 @@ if test "x$ARTSCCONFIG" != "xno"; then
 	ARTS_HAVE_PREFIX=`$ARTSCCONFIG --arts-prefix`
 fi
 
-if test "x$ARTS_HAVE_VERSION" = "x$ARTS_WANT_VERSION"; then
+dnl don't look at the micro version
+if test "x`echo $ARTS_HAVE_VERSION | sed 's/\.[[0-9]]*$/.x/'`" = "x$ARTS_WANT_VERSION"; then
 	if test "x$ARTS_HAVE_PREFIX" = "x$prefix"; then
 		ARTS_OK=yes
 	else
@@ -132,9 +133,8 @@ AC_MSG_RESULT($ARTS_OK)
 if test "x$ARTS_OK" = "xno"; then
 AC_MSG_ERROR([aRts $ARTS_WANT_VERSION not found.
 
-aRts has been moved to a seperate CVS module. Please checkout the "arts" CVS
-module, compile and install it with the same prefix as KDE, and then retry to
-build kdelibs. Sorry for any inconvenience caused by this move.
+You'll need to install a suitable version of aRts in the same prefix as KDE
+before you build kdelibs.
 
 (found
  * artsc-config: $ARTSCCONFIG
