Added framework to load external modules
svn path=/trunk/kdelibs/; revision=145600

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -14,17 +14,20 @@ kdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 kdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(top_builddir)/kdecore/libkdefakes.la
 kdeprint_lpr_la_METASOURCES = AUTO
 
-noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
+noinst_HEADERS = printcapreader.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
 		 kmlpruimanager.h lpchelper.h lpqhelper.h \
 		 kmlprjobmanager.h matichelper.h klprprinterimpl.h \
-		 lprsettings.h kmconfiglpr.h apshandler.h \
+		 kmconfiglpr.h apshandler.h \
 		 lprngtoolhandler.h \
 		 editentrydialog.h
 
+kdeprintlpr_HEADERS = printcapentry.h lprhandler.h lprsettings.h
+kdeprintlprdir = $(includedir)/kdeprint/lpr
+
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
-make_driver_db_lpr_LDADD = $(top_builddir)/kdecore/libkdefakes.la ../libdriverparse.a
+make_driver_db_lpr_LDADD = $(top_builddir)/kdecore/libkdefakes.la ../libdriverparse.a $(LIBDL)
 
 entry_DATA = lpr.print
 entrydir = $(kde_datadir)/kdeprint/plugins
