--- a/kdeprint/cups/Makefile.am
+++ b/kdeprint/cups/Makefile.am
@@ -11,7 +11,7 @@ kdeprint_cups_la_SOURCES = cupsinfos.cpp ipprequest.cpp kmcupsfactory.cpp kmcups
 			      kmwippselect.cpp kcupsprinterimpl.cpp kmcupsconfigwidget.cpp \
 			      kmconfigcups.cpp kmconfigcupsdir.cpp kmwippprinter.cpp kmwfax.cpp kmwquota.cpp \
 			      kmpropquota.cpp kmwusers.cpp kmpropusers.cpp kpschedulepage.cpp image.cpp \
-				  imagepreview.cpp imageposition.cpp marginpreview.cpp kpimagepage.cpp marginwidget.cpp \
+				  imagepreview.cpp imageposition.cpp kpimagepage.cpp \
 				  kptextpage.cpp kphpgl2page.cpp cupsaddsmb2.cpp kmwother.cpp ippreportdlg.cpp
 kdeprint_cups_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 kdeprint_cups_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(LIB_KIO) $(LIB_CUPS) $(top_builddir)/kdecore/libkdefakes.la
@@ -21,12 +21,12 @@ noinst_HEADERS = cupsinfos.h ipprequest.h kmcupsfactory.h kmcupsjobmanager.h kmc
 		 kmpropbanners.h kmwbanners.h kmwipp.h kmwippselect.h kcupsprinterimpl.h \
 		 kmcupsconfigwidget.h kmconfigcups.h kmconfigcupsdir.h kmwippprinter.h kmwfax.h kmwquota.h \
 		 kmpropquota.h kmwusers.h kmpropusers.h kpschedulepage.h imagepreview.h imageposition.h \
-		 marginpreview.h kpimagepage.h marginwidget.h kptextpage.h kphpgl2page.h cupsaddsmb2.h \
+		 kpimagepage.h kptextpage.h kphpgl2page.h cupsaddsmb2.h \
 		 kmwother.h ippreportdlg.h
 
 bin_PROGRAMS = make_driver_db_cups cupsdoprint
 make_driver_db_cups_SOURCES = make_driver_db_cups.c
-make_driver_db_cups_LDADD = -lz ../libdriverparse.a $(top_builddir)/kdecore/libkdefakes.la
+make_driver_db_cups_LDADD = -lz ../libdriverparse.a $(top_builddir)/kdecore/libkdefakes.la $(LIBDL)
 
 cupsdoprint_SOURCES = cupsdoprint.c
 cupsdoprint_LDADD = $(LIB_CUPS) $(top_builddir)/kdecore/libkdefakes.la
