--- a/mimetypes/application/x-gzpostscript.desktop
+++ b/mimetypes/application/x-gzpostscript.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Comment=Gzipped Postscript File
+Comment=Gzipped PostScript File
 Comment[af]=gzip gekompakteerde postscript lêer
 Comment[ar]=ملف بوست سكريبت مضغوط عن طريق Gzip
 Comment[az]=Sıxışdırılmış Postscript Faylı
