Finally included the "tools" section in compilation
svn path=/trunk/kdelibs/; revision=145820

--- a/kdeprint/Makefile.am
+++ b/kdeprint/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = . management lpdunix $(CUPSSUBDIR) lpr rlpr ext filters pics tests
+SUBDIRS = . management lpdunix $(CUPSSUBDIR) lpr rlpr ext filters pics tools tests
 
 INCLUDES= -I$(top_srcdir)/kdefx -I$(top_srcdir)/kded -I$(top_srcdir) $(all_includes)
 
